public/css/profile_info.css
.form-control {
    padding: 0em 0.5em;
    width: 12em;
    font-size: inherit;
}

.form-label {
    margin: 0%;
    font-weight: 600;
}

.form-select {
    padding: 0em 0.25em;
    font-size: inherit;
    width: 9em;
}

/* .form-check-input {
    padding: 0%;
} */

.input-description {
    font-weight: bold;
}

.input-group-text {
    padding: 0em 0.5em
}

.invalid-feedback {
    overflow-wrap: normal;
}

.form-fields-container {
    padding: 1rem;
    width: auto;
    display: flex;
    flex-direction: column;
    row-gap: 0.5em;
}

.field-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    row-gap: 0em;
}

.form-submit-button {
    width: max-content;
}

.form-fields-group-vertical, .form-fields-group-horizontal {
    display: flex;
    flex-wrap: wrap;
}

.form-fields-group-vertical {
    flex-direction: column;
    row-gap: 0%;
    margin-top: 1rem;
}

.form-fields-group-horizontal {
    flex-direction: row;
    column-gap: 3rem;
    justify-content: center;
    align-items: left;
}

